# VIETCLAW

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: metadata_schema.json  rag_config.yaml
data/bo-luat/: bo-luat-dan-su-2015.md  bo-luat-hinh-su-2015.md  bo-luat-lao-dong-2019.md  bo-luat-to-tung-dan-su-2015.md  bo-luat-to-tung-hinh-su-2015.md
data/hien-phap/: hien-phap-2013.md
data/luat/: luat-an-ninh-mang-2018.md  luat-bao-ve-moi-truong-2020.md  luat-can-bo-cong-chuc-2008.md  luat-dat-dai-2024.md  luat-dau-tu-2020.md  luat-doanh-nghiep-2020.md  luat-giao-duc-2019.md  luat-hon-nhan-gia-dinh-2014.md  luat-khieu-nai-2011.md  luat-nha-o-2023.md  luat-phong-chong-tham-nhung-2018.md  luat-so-huu-tri-tue-2005.md  luat-thue-gia-tri-gia-tang-2008.md  luat-thue-thu-nhap-ca-nhan-2007.md  luat-thue-thu-nhap-doanh-nghiep-2008.md  luat-thuong-mai-2005.md  luat-to-cao-2018.md
data/nghi-dinh/: nghi-dinh-01-2021-dang-ky-doanh-nghiep.md  nghi-dinh-100-2019-xu-phat-vi-pham-giao-thong.md  nghi-dinh-145-2020-huong-dan-bo-luat-lao-dong.md  nghi-dinh-168-2024-xu-phat-giao-thong.md
data/thong-tu/: thong-tu-111-2013-huong-dan-thue-tncn.md  thong-tu-78-2014-huong-dan-thue-tndn.md
data/van-ban-moi-2024-2026/: luat-an-ninh-mang-2025.md  luat-bao-chi-2025.md  luat-bao-hiem-xa-hoi-2024.md  luat-bao-ve-bi-mat-nha-nuoc-2025.md  luat-bao-ve-du-lieu-ca-nhan-2025.md  luat-bau-cu-sua-doi-2025.md  luat-can-cuoc-2023.md  luat-chat-luong-san-pham-sua-doi-2025.md  luat-chuyen-doi-so-2025.md  luat-chuyen-giao-nguoi-chap-hanh-an-2025.md  luat-cong-doan-2024.md  luat-cong-nghiep-cong-nghe-so-2025.md  luat-dan-do-2025.md  luat-dan-so-2025.md  (+50 more)
docs/: USAGE.md
scripts/: build_index.py  chunk_documents.py  export_embeddings.py  validate_metadata.py
tests/: conftest.py  test_chunk_documents.py  test_config.py  test_data_integrity.py  test_validate_metadata.py
vietlaw/: __init__.py  config.py  rag.py  retriever.py
